Fix display bug with scrollbar into UI

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,7 @@ form {
 #wrap {
   min-height: 100%;
   margin-bottom: -50px;
+  overflow: hidden;
 }
 
 #wrap:after {
