--- a/app/assets/stylesheets/dossiers.scss
+++ b/app/assets/stylesheets/dossiers.scss
@@ -44,7 +44,6 @@ h5 span {
 
 #procedure_list {
   margin-left: -10px;
-  overflow: scroll;
   margin-top: 20px;
   a, a:hover {
     color: #FFFFFF;
